@@ -398,3 +398,6 @@
 	connector.
 2019-08-13 Fred Gleason <fredg@paravelsystems.com>
 	* Cleaned up warnings in glassplayer(1) when exiting.
+2019-08-13 Fred Gleason <fredg@paravelsystems.com>
+	* Replaced the '--disable-stream-metadata' switch with
+	'--metadata-out' in glassplayer(1).
